[package]
name = "gamels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
clap = { version = "4.3", features = ["derive"] }
thiserror = "1"
anyhow = "1"
size = "0.4"
colored = "2"
lazy_static = "1.4.0"
